--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "lodash": "^3.10.1",
     "marko": "^2.7.27",
     "multiparty": "^4.1.2",
-    "node-xlsx": "^0.6.0"
+    "node-xlsx": "^0.6.0",
+    "q": "^1.4.1"
   },
   "devDependencies": {
     "chai": "^3.3.0",
